--- a/style.css
+++ b/style.css
@@ -12,6 +12,6 @@ tr, td {
     border: 0.2px solid black;
 }
 .blocks:hover{
-    background: rgb(22, 88, 255);
+    background: rgb(255,255,255);
     transition: all 0.6s ease-in-out;
 }
